add Register fake validation and redirect to homepage, add getSubjectById, add SubjectOption and present first subject hierarchy

--- a/client/src/components/UIElements/Card.scss
+++ b/client/src/components/UIElements/Card.scss
@@ -5,7 +5,7 @@
 	align-items: center;
     background-color: white;
     border-radius: 10px;
-    box-shadow: 1px, 1px, 1px, black;
+    box-shadow: 0px 0px 10px 0 rgba(0, 0, 0, 0.107);
     min-width: 240px;
     min-height: min-content;
     padding: 0 50px;
