--- a/client/src/components/UIElements/SubjectOption.scss
+++ b/client/src/components/UIElements/SubjectOption.scss
@@ -3,10 +3,10 @@
     flex-direction: column;
 	justify-content: center;
 	align-items: baseline;
-    background-color: rgb(25, 111, 135);
-    color: white;
+    background-color: rgb(239, 239, 239);
+    box-shadow: 0 2px 1px 2px rgba(0, 0, 0, 0.026);
+    color: rgb(29, 29, 29);
     border-radius: 10px;
-    box-shadow: 0px 0px 0px 2px rgb(35, 144, 174);
     margin: 20px;
     padding: 5px;
     cursor: pointer;
@@ -15,8 +15,4 @@
 .subject-option_name {
     font-weight: 600;
     font-size: 1.2em;
-}
-
-.subject-option_description {
-
 }
