--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -1,7 +1,11 @@
+:root {
+    --navbar-height: 4em;
+}
+
 .main-container {
     background-color: rgb(226, 226, 226);
     display: flex;
     align-items: baseline;
     justify-content: center;
-    min-height: calc(100vh - 4em);
+    min-height: calc(100vh - var(--navbar-height));
 }
