--- a/client/src/components/UIElements/Button.scss
+++ b/client/src/components/UIElements/Button.scss
@@ -1,14 +1,22 @@
-.button {
-    font-size: 16px;
-    min-width: 100px;
+.button, .button-inverse {
+    min-width: 180px;
     font-weight: 600;
-    height: 40px;
+    height: var(--height-button);
     padding: 5px;
     margin: 5px;
-    color: white;
-    background-color: #2a2a67;
     outline: none;
     border: none;
-    border-radius: 15px;
+    border-radius: var(--border-radius-button);
     cursor: pointer;
+}
+
+.button-inverse {
+    color: var(--main-blue);
+    background-color: white;
+    border: 2px solid var(--main-blue);
+}
+
+.button:not(.button-inverse) {
+    color: white;
+    background-color: var(--main-blue);
 }
