--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,21 @@
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Heebo'!important;
   line-height: 1.5;
   font-weight: 400;
+  direction: rtl;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+*, *::before, *::after {
+  font-family: inherit!important;
+}
+
+::placeholder {
+  font-family: inherit!important;
 }
 
 body {
