--- a/client/src/pages/Homepage.scss
+++ b/client/src/pages/Homepage.scss
@@ -2,8 +2,25 @@
     width: 90vw;
     display: flex;
     flex-direction: column;
-    justify-content: baseline;
     align-items: center;
+}
+
+.page-wraper {
+    width: min-content;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.page-header_container {
+    display: flex;
+    flex-direction: column;
+    justify-content: baseline;
+    align-self: baseline;
+}
+
+.page-header_headline {
+    font-weight: 800;
 }
 
 .main-subjects-container {
