--- a/client/src/pages/Homepage.scss
+++ b/client/src/pages/Homepage.scss
@@ -6,13 +6,15 @@
 }
 
 .page-wraper {
-    width: min-content;
+    width: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    user-select: none;
 }
 
 .page-header_container {
+    padding-right: 65px;
     display: flex;
     flex-direction: column;
     justify-content: baseline;
@@ -24,7 +26,6 @@
 }
 
 .main-subjects-container {
-    display: grid;
+    display: flex;
     grid-template-columns: 1fr  1fr;
-    gap: 10px;
 }
