--- a/client/src/components/UIElements/Button.scss
+++ b/client/src/components/UIElements/Button.scss
@@ -1,4 +1,4 @@
-.button, .button-inverse {
+.button {
     min-width: 180px;
     font-weight: 600;
     height: var(--height-button);
@@ -7,16 +7,17 @@
     outline: none;
     border: none;
     border-radius: var(--border-radius-button);
+    color: white;
+    background-color: var(--main-blue);
     cursor: pointer;
 }
 
-.button-inverse {
+.button.inverse {
     color: var(--main-blue);
     background-color: white;
     border: 2px solid var(--main-blue);
 }
 
-.button:not(.button-inverse) {
-    color: white;
-    background-color: var(--main-blue);
+.button.bold {
+    font-weight: 800;
 }
