--- a/client/src/components/UIElements/SubjectOption.scss
+++ b/client/src/components/UIElements/SubjectOption.scss
@@ -7,21 +7,21 @@
     width: 90%;
     height: var(--height-button);
     background-color: #ffffff;
-    border: 2px solid var(--global-subject-color);;
+    border: 2px solid var(--global-subject-color);
     box-shadow: 0 2px 1px 2px rgba(0, 0, 0, 0.026);
     color: #ffffff;
     border-radius: 10px;
     padding: 0 10px;
     cursor: pointer;
     user-select: none;
+
     &:not(.hidden) {
         margin: 5px 0;
     }
 }
 
-
 .subject-option_container.more {
-    background-color: var(--global-subject-color);;
+    background-color: var(--global-subject-color);
 
     .subject-option_name {
         color: #ffffff;
@@ -31,7 +31,7 @@
 .subject-option_name {
     font-weight: 600;
     font-size: 1.2em;
-    color: var(--global-subject-color);;
+    color: var(--global-subject-color);
 }
 
 .subject-option_left {
