--- a/client/src/components/subject/SubjectCard.scss
+++ b/client/src/components/subject/SubjectCard.scss
@@ -7,8 +7,7 @@
     background-color: rgb(239, 239, 239);
     box-shadow: 0 2px 1px 2px rgba(0, 0, 0, 0.026);
     color: white;
-    // min-width: 100px;
-    width: auto;
+    width: max-content;
     height: 60px;
     border-radius: 10px;
     margin: 10px;
