--- a/client/src/pages/Homepage.scss
+++ b/client/src/pages/Homepage.scss
@@ -5,8 +5,8 @@
     align-items: center;
 }
 
-.page-wraper {
-    width: 100%;
+.page-wrapper {
+    width: 90%;
     display: flex;
     flex-direction: column;
     align-items: center;
