--- a/client/src/components/UIElements/SubjectOption.scss
+++ b/client/src/components/UIElements/SubjectOption.scss
@@ -10,8 +10,8 @@
     border: 2px solid var(--global-subject-color);;
     box-shadow: 0 2px 1px 2px rgba(0, 0, 0, 0.026);
     color: #ffffff;
-    border-radius: 10px;
-    padding: 0 10px;
+    border-radius: 0 10px 10px 0;
+    padding: 0 10px 0 0;
     cursor: pointer;
     user-select: none;
     &:not(.hidden) {
