--- a/client/src/components/navbar/Navbar.scss
+++ b/client/src/components/navbar/Navbar.scss
@@ -3,8 +3,8 @@
     height: var(--navbar-height);
     align-items: center;
     justify-content: center;
-    box-shadow: 0 0 10px 5px rgba(0, 0, 0, 0.5);
-    border-bottom: 5px solid rgba(0, 0, 0, 0.048);
+    box-shadow: 0 0 5px 0 rgba(0, 0, 0, 0.1);
+    position: relative;    
 }
 
 .logged {
