--- a/client/src/components/UIElements/ScoresChart.scss
+++ b/client/src/components/UIElements/ScoresChart.scss
@@ -9,12 +9,17 @@
     font-size: 1.2em;
     font-weight: 600;
 
-    :first-child {
+    :first-child .bgg {
         border-radius: 10px 0 0 10px;
     }
 
-    :last-child {
+    :last-child .bgg {
         border-radius: 0 10px 10px 0;
+    }
+
+    .scores-chart-wrapper_section {
+        display: flex;
+        flex-direction: column;
     }
 
     .correct-answers {
@@ -29,6 +34,21 @@
 
     .no-answers {
         background-color: #aaaaaa;
+        padding: 5px 1px;
+    }
+
+    .correct-answers_title {
+        color: #98D11F;
+        padding: 5px 1px;
+    }
+
+    .wrong-answers_title {
+        color: #F23434;
+        padding: 5px 1px;
+    }
+
+    .no-answers_title {
+        color: #aaaaaa;
         padding: 5px 1px;
     }
 }
