--- a/client/src/components/UIElements/SubjectCard.scss
+++ b/client/src/components/UIElements/SubjectCard.scss
@@ -7,7 +7,8 @@
     background-color: rgb(239, 239, 239);
     box-shadow: 0 2px 1px 2px rgba(0, 0, 0, 0.026);
     color: white;
-    width: max-content;
+    // min-width: 100px;
+    width: auto;
     height: 60px;
     border-radius: 10px;
     margin: 10px;
