replaced tailwind with unocss

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,8 @@
 @import url('./assets/fontawesome/css/all.min.css');
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
 
 :root {
   line-height: 1.5;
   font-weight: 400;
-
   font-synthesis: none;
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
@@ -15,6 +11,8 @@
 
 *:not(i) {
   font-family: 'Heebo' !important;
+  box-sizing: border-box !important;
+
 }
 
 
