--- a/client/src/components/UIElements/ScoresChart.scss
+++ b/client/src/components/UIElements/ScoresChart.scss
@@ -6,49 +6,34 @@
     width: 100%;
     text-align: center;
     color: white;
-    font-size: 1.2em;
+    font-size: 0.9em;
     font-weight: 600;
 
     :first-child .bgg {
-        border-radius: 10px 0 0 10px;
+        border-radius: 0px 0 0 5px;
     }
 
     :last-child .bgg {
-        border-radius: 0 10px 10px 0;
+        border-radius: 0 0px 5px 0;
     }
 
     .scores-chart-wrapper_section {
         display: flex;
         flex-direction: column;
+        min-width: max-content;
     }
 
     .correct-answers {
-        background-color: #98D11F;
-        padding: 5px 1px;
+        padding: 2px 15px;
     }
 
     .wrong-answers {
-        background-color: #F23434;
-        padding: 5px 1px;
+        padding: 2px 15px;
+
     }
 
     .no-answers {
-        background-color: #aaaaaa;
-        padding: 5px 1px;
-    }
+        padding: 2px 15px;
 
-    .correct-answers_title {
-        color: #98D11F;
-        padding: 5px 1px;
-    }
-
-    .wrong-answers_title {
-        color: #F23434;
-        padding: 5px 1px;
-    }
-
-    .no-answers_title {
-        color: #aaaaaa;
-        padding: 5px 1px;
     }
 }
